--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 	<head>
-		<title>Web Applications Development</title>
-		<script src="script.js"></script>
-		<link rel="stylesheet" type="text/css" href="style.css">
+
 	</head>
 
 	<body>
-
+		<?php
+			echo "<h1> hello World </h1>"
+		?>
 	</body>
 </html>
